# rustoracer

./: .gitignore  Cargo.toml  README.md  autodrive_online_async_roboracer.yaml  my_map.pgm  my_map.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
maps/: my_map.pgm  my_map.yaml
racing_agent/: package.xml  setup.cfg  setup.py
racing_agent/launch/: racing.launch.py
racing_agent/racing_agent/: agent_node.py
rustoracerpy/: env.py  rustoracer.cp312-win_amd64.pyd  rustoracer.cp314-win_amd64.pyd
scripts/: autodrive.py  learnrl.py  learnrl_autodrive.py  learnrl_dreamer.py  learnrl_jax.py  pure_pursuit.py  shac_jax.py
scripts/autodrive_devkit/: README.md  requirements_python_3.10.txt  requirements_python_3.8.txt
scripts/autodrive_devkit/autodrive_roboracer/: autodrive_bridge.py  config.py  teleop_keyboard.py
scripts/dreamer/src/: configs.yaml  models.py  networks.py  tools.py
src/: car.rs  lib.rs  main.rs  map.rs  python.rs  render.rs  sim.rs  skeleton.rs
