[package]
name = "rustoracer"
version = "0.4.1"
edition = "2024"

[lib]
name = "rustoracer"
crate-type = ["cdylib"]

[dependencies]
image = "0.25.9"
imageproc = "0.26.0"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.20"
r2r = { version = "0.9.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
pyo3 = { version = "0.28.2", optional = true }
numpy = { version = "0.28.0", optional = true }
rand = "0.10.0"
rand_distr = "0.6.0"
kiddo = "5.2.4"

[features]
ros = ["dep:r2r", "dep:tokio", "dep:futures"]
python = ["dep:pyo3", "dep:numpy"]

[profile.profiling]
inherits = "release"
debug = true
